[tool.poetry]
name = "oprosnik"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.23"
pyjwt = "^2.8.0"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
